<resources>
    <string name="app_name">ShoeStore</string>
    <string name="inventory_text">Inventory</string>
    <string name="username_text">User Name</string>
    <string name="email_text">Enter your Email Address</string>
    <string name="Password_text">Password</string>
    <string name="enterpassword_text">Enter Your Password</string>
    <string name="signin_button">SIGN IN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="Background">Background</string>
    <string name="Welcome">Background</string>
    <string name="welcometext_text">Save your desired shoe with the required info at ease</string>
    <string name="welcome_text">Welcome to the ShoeStore Inventory :)</string>
    <string name="Next_button">NEXT</string>
    <string name="instruction">Instructions</string>
    <string name="instruction1_Text">1.Select the Right Shoe</string>
    <string name="instruction2_Text">2.Fill in the Required details of the shoe</string>
    <string name="instruction3_Text">3.Click SAVE</string>
    <string name="Logout_text">Logout</string>
    <string name="Todetailscreen">to detail screen</string>
    <string name="Model_text">Model:</string>
    <string name="Brand_text">Brand:</string>
    <string name="Modeledit_text">Enter the Model Name</string>
    <string name="Brandedit_text">Enter the Brand Name</string>
    <string name="Description_text">Description:</string>
    <string name="EnterDescription_text">Description about the shoe</string>
    <string name="Size">Size:</string>
    <string name="Shoe_Size">Enter Shoe Size</string>
    <string name="canccel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="shoesize_42">42</string>
    <string name="shoesize_43">43</string>
    <string name="shoesize_44">44</string>
    <string name="shoesize_45">45</string>


</resources>
