<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Model_text"
            style="@style/Shoedetailfont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Model_text"
            app:layout_constraintEnd_toStartOf="@+id/Modeledit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Modeledit_text"
            style="@style/Shoedetailedit_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:text="@={shoeViewModel.shoesList.name}"
            android:hint="@string/Modeledit_text"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/Model_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/Model_text"
            app:layout_constraintTop_toTopOf="@+id/Model_text"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/Brand_text"
            style="@style/Shoedetailfont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Brand_text"
            app:layout_constraintEnd_toStartOf="@+id/Brandedit_text"
            app:layout_constraintStart_toStartOf="@+id/Model_text"
            app:layout_constraintTop_toBottomOf="@+id/Model_text" />

        <EditText
            android:id="@+id/Brandedit_text"
            style="@style/Shoedetailedit_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:text="@={shoeViewModel.ShoesList.company}"
            android:hint="@string/Brandedit_text"
            app:layout_constraintBottom_toBottomOf="@+id/Brand_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toEndOf="@+id/Brand_text"
            app:layout_constraintTop_toBottomOf="@+id/Modeledit_text"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/Description_text"
            style="@style/Shoedetailedit_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/Description_text"
            android:text="@string/Description_text"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Brand_text" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:text="@={shoeViewModel.ShoesList.description}"
            android:gravity="start|top"
            android:hint="@string/EnterDescription_text"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Description_text"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/Save_button"
            style="@style/buttonBox"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:onClick="@{() -> shoeViewModel.addShoe()}"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            style="@style/buttonBox"
            android:text="@string/canccel_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/Save_button"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Shoesize"
            style="@style/Shoedetailfont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/Size"
            app:layout_constraintEnd_toStartOf="@+id/entershoesize_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Brand_text" />

        <EditText
            android:id="@+id/entershoesize_text"
            style="@style/Shoedetailedit_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Shoe_Size"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.ShoesList.size}"
            app:layout_constraintBottom_toBottomOf="@+id/Shoesize"
            app:layout_constraintEnd_toEndOf="@+id/Brandedit_text"
            app:layout_constraintStart_toStartOf="@+id/Brandedit_text"
            app:layout_constraintTop_toTopOf="@+id/Shoesize"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>