<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.login.fragment_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Login_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="@dimen/background_02"
            android:contentDescription="@string/Background"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@drawable/background" />
        <EditText
            android:id="@+id/passwordField"
            style="@style/emailfont"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="80dp"
            android:hint="@string/enterpassword_text"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/Password"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/login_text"
            style="@style/titlefont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintBottom_toTopOf="@+id/Inventory_text"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <TextView
            android:id="@+id/Inventory_text"
            style="@style/Inventoryfont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_text"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/login_text" />

        <TextView
            android:id="@+id/username_text"
            style="@style/UserNamefont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/username_text"
            app:layout_constraintBottom_toTopOf="@+id/Password"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/Inventory_text"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/userNameField"
            style="@style/emailfont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email_text"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/username_text"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/Password"
            style="@style/UserNamefont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Password_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toTopOf="@+id/passwordField"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/userNameField" />

        <Button
            android:id="@+id/Signinbutton"
            style="@style/buttonBox"
            android:layout_width="363dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/signin_button"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordField"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/Signupbutton"
            style="@style/buttonBox"
            android:layout_width="363dp"
            android:layout_height="25dp"
            android:layout_marginEnd="24dp"
            android:text="@string/signup_button"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/Signinbutton"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="106dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="518dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>